<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="horizontal" >
    
    <Button
        android:id="@+id/submit_question_correct_switch"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:text="@string/question_wrong_answer" />
    
    <EditText
        android:id="@+id/submit_question_answer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/submit_question_correct_switch"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/submit_question_remove_answer_edit"
        android:layout_toRightOf="@+id/submit_question_correct_switch"
        android:hint="@string/submit_question_answer_hint"
        android:singleLine="true" />
    
    <Button
        android:id="@+id/submit_question_remove_answer_edit"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/submit_question_remove_answer" />
    
</RelativeLayout>